--- a/trunk/students/2011/Maria.Fomkina/04.jit/Makefile
+++ b/trunk/students/2011/Maria.Fomkina/04.jit/Makefile
@@ -2,6 +2,7 @@ ROOT   = .
 VM_ROOT = ../../../..
 USER_OBJ = $(OBJ)/my_jit$(OBJ_SUFF) $(OBJ)/main$(OBJ_SUFF) $(OBJ)/my_translator$(OBJ_SUFF) $(OBJ)/bytecode_visitor$(OBJ_SUFF) $(OBJ)/mvm_code$(OBJ_SUFF)
 DEPENDENCIES = 
+USER_CFLAGS = -O0
 
 include $(VM_ROOT)/common.mk
 
