--- a/trunk/students/2011/Alexandr.Mikhajlov/Makefile
+++ b/trunk/students/2011/Alexandr.Mikhajlov/Makefile
@@ -1,14 +1,25 @@
-ROOT   = .
 VM_ROOT = ../../..
-#USER_DEFS = OPT=opt
-USER_OBJ = $(OBJ)/main$(OBJ_SUFF) $(OBJ)/ByteCodeGenerator$(OBJ_SUFF) $(OBJ)/MyInterpreter$(OBJ_SUFF) $(OBJ)/FirstPassVisitor$(OBJ_SUFF) $(OBJ)/GeneratorCommon$(OBJ_SUFF)
-
+ROOT = .
+USER_CFLAGS = -ggdb3 
+WITH_SDL = 1
+#USER_LIBS = -lSDL
+#USER_DEFS = -DVERBOSE
+#OPT = y
 include $(VM_ROOT)/common.mk
 
-LAB1 = $(BIN)/lab1
+all: $(OUT) $(BIN)/main
 
-$(OBJ)/main$(OBJ_SUFF) $(OBJ)/ByteCodeGenerator$(OBJ_SUFF) : ByteCodeGenerator.h
+OBJ_DEPS = $(MATHVM_OBJ) $(OBJ)/main$(OBJ_SUFF) \
+	  $(OBJ)/ByteCodeGenerator$(OBJ_SUFF)  $(OBJ)/FirstPassVisitor$(OBJ_SUFF) \
+	  $(OBJ)/GeneratorCommon$(OBJ_SUFF) \
+	  $(OBJ)/MyInterpreter$(OBJ_SUFF) $(OBJ)/NativeGenerator$(OBJ_SUFF)
 
-all: $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
-	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(THREAD_LIB) 
+INCLUDE_DEPS = ByteCodeGenerator.h FirstPassVisitor.h GeneratorCommon.h \
+	  MyInterpreter.h NativeGenerator.h \
 
+$(BIN)/main: dirs $(INCLUDE_DEPS) $(OBJ_DEPS)
+	$(CXX) $(USER_FLAGS) -o $@ $(LIBS) $(OBJ_DEPS)
+	
+dirs:
+	mkdir -p ./build/debug
+	mkdir -p  ./build/opt
