--- a/students/2011/Svetlana.Marchenko/lab2_translator/Makefile
+++ b/students/2011/Svetlana.Marchenko/lab2_translator/Makefile
@@ -9,7 +9,7 @@ LAB2 = $(BIN)/lab2_translator
 
 all: $(LAB2)
 
-$(OBJ)/main$(OBJ_SUFF) $(OBJ)/TranslateVisitor$(OBJ_SUFF) $(OBJ$(OBJ)/VarTable$(OBJ_SUFF) $(OBJ)/MyCode$(OBJ_SUFF)): TranslateVisitor.h VarTable.h  MyCode.h
+$(OBJ)/main$(OBJ_SUFF) $(OBJ)/TranslateVisitor$(OBJ_SUFF) $(OBJ)/VarTable$(OBJ_SUFF) $(OBJ)/MyCode$(OBJ_SUFF): TranslateVisitor.h VarTable.h  MyCode.h
 
 $(LAB2): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(THREAD_LIB) 
