--- a/trunk/students/2011/Alexey.Gurevich/lab4.jit/Makefile
+++ b/trunk/students/2011/Alexey.Gurevich/lab4.jit/Makefile
@@ -1,18 +1,17 @@
-ROOT   = .
 VM_ROOT = ../../../..
-USER_DEFS = -g3
-USER_OBJ = $(OBJ)/main$(OBJ_SUFF) $(OBJ)/my_translator$(OBJ_SUFF) $(OBJ)/bytecoder$(OBJ_SUFF) $(OBJ)/my_code$(OBJ_SUFF)
- 
+ROOT = .
+USER_CFLAGS = -ggdb3 
+WITH_SDL = 1
 include $(VM_ROOT)/common.mk
 
-LAB4 = $(BIN)/lab4
+all: $(OUT) $(BIN)/lab4
 
-all: $(LAB4)
+OBJ_DEPS = $(MATHVM_OBJ) $(OBJ)/main$(OBJ_SUFF) \
+	  $(OBJ)/bytecoder$(OBJ_SUFF)  $(OBJ)/my_code$(OBJ_SUFF) \
+	  $(OBJ)/my_translator$(OBJ_SUFF)
 
-$(OBJ)/main$(OBJ_SUFF) $(OBJ)/my_translator$(OBJ_SUFF) $(OBJ)/bytecoder$(OBJ_SUFF)  $(OBJ)/bytecoder$(OBJ_SUFF): my_translator.h  bytecoder.h my_code.h config.h
+INCLUDE_DEPS = config.h bytecoder.h my_code.h \
+	  my_translator.h
 
-$(LAB4): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
-	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(THREAD_LIB) 
-
-test: $(LAB4)
-	./test.sh
+$(BIN)/lab4: dirs $(INCLUDE_DEPS) $(OBJ_DEPS)
+	$(CXX) $(USER_FLAGS) -o $@ $(LIBS) $(OBJ_DEPS)
