--- a/trunk/students/2012/kazenyuk/ast2src/Makefile
+++ b/trunk/students/2012/kazenyuk/ast2src/Makefile
@@ -15,3 +15,5 @@ all: $(AST2SRC)
 
 $(AST2SRC): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
+
+$(OBJ)/main$(OBJ_SUFF): utils.hpp
