--- a/trunk/students/2012/kazenyuk/ast2src/Makefile
+++ b/trunk/students/2012/kazenyuk/ast2src/Makefile
@@ -16,4 +16,4 @@ all: $(AST2SRC)
 $(AST2SRC): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
 
-$(OBJ)/main$(OBJ_SUFF): utils.hpp
+$(OBJ)/main$(OBJ_SUFF): converter.hpp utils.hpp
