--- a/trunk/students/2012/krinkin/Makefile
+++ b/trunk/students/2012/krinkin/Makefile
@@ -1,11 +1,11 @@
 ROOT        = .
 VM_ROOT     = ../../..
-USER_CFLAGS = -std=c++0x
+USER_CFLAGS = 
 USER_OBJ    = \
         $(OBJ)/main$(OBJ_SUFF) \
         $(OBJ)/pretty$(OBJ_SUFF)
 
-include $(ROOT)/common.mk
+include $(VM_ROOT)/common.mk
 
 ASTPRINTER = $(BIN)/astprinter
 
