--- a/students/2012/korovin/ast_printer/Makefile
+++ b/students/2012/korovin/ast_printer/Makefile
@@ -2,14 +2,13 @@ ROOT   = .
 VM_ROOT = ../../../..
 
 USER_OBJ = $(OBJ)/main$(OBJ_SUFF) \
-           $(OBJ)/ast_printer$(OBJ_SUFF)
+           $(OBJ)/AstPrinter$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
-AST_PRINTER = $(BIN)/ast_printer
+AST_PRINTER = $(BIN)/AstPrinter
 
 all: $(AST_PRINTER)
-build: $(AST_PRINTER)
 
 $(AST_PRINTER): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
-        $(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
+	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
