--- a/trunk/students/2012/krinkin/printast/Makefile
+++ b/trunk/students/2012/krinkin/printast/Makefile
@@ -1,5 +1,5 @@
 ROOT        = .
-VM_ROOT     = ../../..
+VM_ROOT     = ../../../..
 USER_CFLAGS = 
 USER_OBJ    = \
         $(OBJ)/main$(OBJ_SUFF) \
