--- a/students/2012/opeykin/bytecode_translation/Makefile
+++ b/students/2012/opeykin/bytecode_translation/Makefile
@@ -2,7 +2,7 @@ ROOT   = .
 VM_ROOT = ../../../..
 
 USER_OBJ = $(OBJ)/main$(OBJ_SUFF) \
-	$(OBJ)/ExecutableCode$(OBJ_SUFF) \
+	$(OBJ)/interpreter_code_impl$(OBJ_SUFF) \
 	$(OBJ)/CodeBuilderVisitor$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
