--- a/students/2012/krasko/bytecode_gen/Makefile
+++ b/students/2012/krasko/bytecode_gen/Makefile
@@ -2,14 +2,15 @@ ROOT   = .
 VM_ROOT = ../../../..
 NO_JIT = 1
 
-BYTECODE = $(BIN)/bytecode_gen
-
-build: $(BYTECODE)
+all: build
 
 USER_OBJ = $(OBJ)/main$(OBJ_SUFF) 
 
 include $(VM_ROOT)/common.mk
 
+BYTECODE = $(BIN)/bytecode_gen
+
+build: $(BYTECODE)
 
 
 $(BYTECODE): $(OUT) $(USER_OBJ) $(MATHVM_OBJ) 
